--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ target_sources(app PRIVATE
   subsys/platform/zephyr_display.cpp
   subsys/platform/zephyr_ethernet.cpp
   subsys/servers/hello_service.cpp
+  subsys/servers/time_service.cpp
+  subsys/servers/tcp_service.cpp
   subsys/platform/zephyr_logger.cpp
 )
 
