--- a/prj.conf
+++ b/prj.conf
@@ -8,7 +8,7 @@ CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_BUFFER_SIZE=512
-CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=512
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 CONFIG_DISPLAY=y
 CONFIG_PWM=y
 
@@ -18,11 +18,11 @@ CONFIG_NET_IPV4=y
 # CONFIG_NET_IPV6 is not set
 CONFIG_NET_ARP=y
 CONFIG_NET_UDP=y
-# CONFIG_NET_TCP is not set
+CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
 CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
-# CONFIG_NET_SOCKETS is not set
+CONFIG_NET_SOCKETS=y
 CONFIG_NET_PKT_RX_COUNT=8
 CONFIG_NET_PKT_TX_COUNT=8
 CONFIG_NET_BUF_RX_COUNT=16
@@ -33,6 +33,11 @@ CONFIG_NET_TX_STACK_SIZE=1024
 CONFIG_ETH_STM32_HAL=y
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_ENTROPY_STM32_RNG=y
+CONFIG_RTC=y
+CONFIG_RTC_STM32=y
 
-CONFIG_MAIN_STACK_SIZE=768
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=768
+CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
+CONFIG_INIT_STACKS=y
+CONFIG_THREAD_STACK_INFO=y
+CONFIG_STACK_SENTINEL=y
