feat(sdcard,rtc): simplify sdcard service and switch RTC clock to LSE
- Refactor SdcardService to a mount/read/write focused service and remove probe self-test flow.

- Add thread-safe file access path with internal mutex and keep direct-call usage model.

- Introduce initialized gating: app_Init marks sdcard initialized after run() succeeds; read/write require mounted+initialized state.

- Reserve async API enqueue_write() as placeholder for future queue worker integration.

- Switch board RTC source to LSE (32.768kHz) and enable clk_lse in board DTS for improved long-term time stability.

- Sync board DTS copy under project tree and keep build passing on lckfb_sky_board_stm32f407.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(app PRIVATE
   subsys/platform/zephyr_display.cpp
   subsys/platform/zephyr_ethernet.cpp
   subsys/servers/hello_service.cpp
+  subsys/servers/sdcard_service.cpp
   subsys/servers/time_service.cpp
   subsys/servers/tcp_service.cpp
   subsys/platform/zephyr_logger.cpp
