--- a/prj.conf
+++ b/prj.conf
@@ -11,6 +11,10 @@ CONFIG_LOG_BUFFER_SIZE=512
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 CONFIG_DISPLAY=y
 CONFIG_PWM=y
+CONFIG_DISK_ACCESS=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_DISK_DRIVER_SDMMC=y
 
 CONFIG_NETWORKING=y
 CONFIG_NET_L2_ETHERNET=y
@@ -36,7 +40,7 @@ CONFIG_ENTROPY_STM32_RNG=y
 CONFIG_RTC=y
 CONFIG_RTC_STM32=y
 
-CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
 CONFIG_INIT_STACKS=y
 CONFIG_THREAD_STACK_INFO=y
