feat(sensor): add generic SensorHub framework and integration docs
- add OOP sensor abstractions (ISensorDriver/IIna226Sensor/IAht20Sensor)

- implement registration-based SensorHub for N drivers with generic read/init/query APIs

- refactor SensorService to generic cache/polling over registered sensor types

- add Zephyr INA226(0x40) + AHT20(0x38) platform drivers and board DTS nodes

- enable required Kconfig options and wire startup/build integration

- add sensor integration guides and markdownlint fixes

- update clangd diagnostics suppression for devicetree false positives

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,10 @@ target_sources(app PRIVATE
   subsys/platform/zephyr_backlight.cpp
   subsys/platform/zephyr_display.cpp
   subsys/platform/zephyr_ethernet.cpp
+  subsys/platform/zephyr_sensors.cpp
   subsys/servers/hello_service.cpp
   subsys/servers/sdcard_service.cpp
+  subsys/servers/sensor_service.cpp
   subsys/servers/time_service.cpp
   subsys/servers/tcp_service.cpp
   subsys/platform/zephyr_logger.cpp
