--- a/prj.conf
+++ b/prj.conf
@@ -10,7 +10,11 @@ CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_BUFFER_SIZE=512
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 CONFIG_DISPLAY=y
+CONFIG_I2C=y
 CONFIG_PWM=y
+CONFIG_SENSOR=y
+CONFIG_INA226=y
+CONFIG_DHT20=y
 CONFIG_DISK_ACCESS=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
