feat(time): switch to SNTP domain sync with DNS support
- Change TimeService SNTP source to ntp.aliyun.com and use sntp_simple()

- Increase SNTP timeout to 5000ms and keep 10min periodic sync logic

- Enable DNS resolver and heap pool for getaddrinfo path in prj.conf

- Add grouped explanatory comments in prj.conf for maintenance

- Verification: west build -b lckfb_sky_board_stm32f407 ... (exit 0)

--- a/prj.conf
+++ b/prj.conf
@@ -1,25 +1,34 @@
+# C++ runtime settings
 CONFIG_CPP=y
 CONFIG_STD_CPP17=y
 # CONFIG_CPP_EXCEPTIONS is not set
 # CONFIG_CPP_RTTI is not set
 CONFIG_MINIMAL_LIBCPP=y
 
+# Logging
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_BUFFER_SIZE=512
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
+
+# Peripheral drivers
 CONFIG_DISPLAY=y
 CONFIG_I2C=y
 CONFIG_PWM=y
+
+# Sensor framework and concrete drivers
 CONFIG_SENSOR=y
 CONFIG_INA226=y
 CONFIG_DHT20=y
+
+# Storage and FATFS over SDMMC
 CONFIG_DISK_ACCESS=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_DISK_DRIVER_SDMMC=y
 
+# Network stack and Ethernet L2
 CONFIG_NETWORKING=y
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_NET_IPV4=y
@@ -31,6 +40,15 @@ CONFIG_NET_DHCPV4=y
 CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
 CONFIG_NET_SOCKETS=y
+
+# Time sync: SNTP + DNS resolver for domain-based NTP server
+CONFIG_SNTP=y
+CONFIG_DNS_RESOLVER=y
+
+# Heap is required by getaddrinfo/DNS path (used by sntp_simple)
+CONFIG_HEAP_MEM_POOL_SIZE=4096
+
+# Network packet/buffer/context tuning
 CONFIG_NET_PKT_RX_COUNT=8
 CONFIG_NET_PKT_TX_COUNT=8
 CONFIG_NET_BUF_RX_COUNT=16
@@ -38,12 +56,17 @@ CONFIG_NET_BUF_TX_COUNT=16
 CONFIG_NET_MAX_CONTEXTS=4
 CONFIG_NET_RX_STACK_SIZE=1024
 CONFIG_NET_TX_STACK_SIZE=1024
+
+# STM32 Ethernet and entropy source
 CONFIG_ETH_STM32_HAL=y
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_ENTROPY_STM32_RNG=y
+
+# RTC support (used by TimeService and log timestamp switch)
 CONFIG_RTC=y
 CONFIG_RTC_STM32=y
 
+# Thread/stack safety and diagnostics
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
 CONFIG_INIT_STACKS=y
