--- a/prj.conf
+++ b/prj.conf
@@ -9,18 +9,24 @@ CONFIG_MINIMAL_LIBCPP=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_DEFAULT_LEVEL=3
-CONFIG_LOG_BUFFER_SIZE=512
-CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
+CONFIG_LOG_BUFFER_SIZE=4096
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=2048
 
 # Peripheral drivers
 CONFIG_DISPLAY=y
 CONFIG_I2C=y
 CONFIG_PWM=y
+CONFIG_DMA=y
 
 # Sensor framework and concrete drivers
 CONFIG_SENSOR=y
+CONFIG_SPI=y
 CONFIG_INA226=y
 CONFIG_DHT20=y
+CONFIG_ICM4268X=y
+CONFIG_ICM4268X_TRIGGER_NONE=y
+# CONFIG_ICM4268X_STREAM is not set
+CONFIG_QDEC_STM32=y
 
 # Storage and FATFS over SDMMC
 CONFIG_DISK_ACCESS=y
