--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,13 @@ target_sources(app PRIVATE
   subsys/platform/font5x7.cpp
   subsys/platform/zephyr_backlight.cpp
   subsys/platform/zephyr_display.cpp
+  subsys/platform/zephyr_encoder.cpp
   subsys/platform/zephyr_ethernet.cpp
+  subsys/platform/zephyr_imu.cpp
   subsys/platform/zephyr_sensors.cpp
+  subsys/servers/encoder_service.cpp
   subsys/servers/hello_service.cpp
+  subsys/servers/imu_service.cpp
   subsys/servers/sdcard_service.cpp
   subsys/servers/sensor_service.cpp
   subsys/servers/time_service.cpp
