refactor: platformize ws2812/storage and improve imu bias handling
- Move SD storage capability from service layer to platform layer and remove sdcard service files

- Consolidate WS2812 usage on platform::ws2812, add TIM5 DMA driver scaffolding and DT binding files

- Update IMU pipeline: startup bias calibration robustness, online slow bias update in still-state, and gyro range set to +/-500 dps

- Keep app startup chain aligned with platformized modules and refresh runbook/docs references

--- a/Kconfig
+++ b/Kconfig
@@ -1,3 +1,19 @@
 mainmenu "Sky Board Zephyr Demo"
 
 source "Kconfig.zephyr"
+
+menu "Sky Board Demo Options"
+
+config SKY_BOARD_WS2812_TIM5_DMA_BACKEND
+	bool "Enable WS2812 TIM5 CH4 DMA backend"
+	default y
+	depends on SOC_FAMILY_STM32
+	select USE_STM32_HAL_TIM
+	select USE_STM32_HAL_TIM_EX
+	select USE_STM32_HAL_DMA
+	select USE_STM32_HAL_GPIO
+	help
+	  Enable STM32 HAL TIM/DMA/GPIO modules required by the project
+	  WS2812 backend running on TIM5 channel 4 (PA3).
+
+endmenu
