--- a/boards/st/lckfb_sky_board_stm32f407/lckfb_sky_board_stm32f407.dts
+++ b/boards/st/lckfb_sky_board_stm32f407/lckfb_sky_board_stm32f407.dts
@@ -213,7 +213,7 @@
 		accel-fs = <ICM42688_DT_ACCEL_FS_16>;
 		accel-odr = <ICM42688_DT_ACCEL_ODR_100>;
 		gyro-pwr-mode = <ICM42688_DT_GYRO_LN>;
-		gyro-fs = <ICM42688_DT_GYRO_FS_2000>;
+		gyro-fs = <ICM42688_DT_GYRO_FS_500>;
 		gyro-odr = <ICM42688_DT_GYRO_ODR_100>;
 		status = "okay";
 	};
