--- a/prj.conf
+++ b/prj.conf
@@ -17,6 +17,7 @@ CONFIG_DISPLAY=y
 CONFIG_I2C=y
 CONFIG_PWM=y
 CONFIG_DMA=y
+CONFIG_SKY_BOARD_WS2812_TIM5_DMA_BACKEND=y
 
 # Sensor framework and concrete drivers
 CONFIG_SENSOR=y
