--- a/prj.conf
+++ b/prj.conf
@@ -34,6 +34,9 @@ CONFIG_DISK_ACCESS=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_DISK_DRIVER_SDMMC=y
+CONFIG_FS_FATFS_LFN=y
+CONFIG_FS_FATFS_LFN_MODE_STACK=y
+CONFIG_FS_FATFS_MAX_LFN=64
 
 # Network stack and Ethernet L2
 CONFIG_NETWORKING=y
