refactor: unify button handling and tooling configs
- Move button event business callbacks into ButtonService and keep platform button layer focused on input capture.
- Add/adjust platform logger variadic API and update related service/platform modules.
- Normalize comment standards and project runbook/docs updates, including cpp comment guideline doc.
- Sync board/app/prj/CMake related integration changes in this batch.
- Verified with runbook build command: west build -b lckfb_sky_board_stm32f407 ... (success, no work to do).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(app PRIVATE
   app/app_Init.cpp
   subsys/platform/font5x7.cpp
   subsys/platform/zephyr_backlight.cpp
+  subsys/platform/zephyr_button.cpp
   subsys/platform/zephyr_display.cpp
   subsys/platform/zephyr_encoder.cpp
   subsys/platform/zephyr_ethernet.cpp
@@ -19,6 +20,7 @@ target_sources(app PRIVATE
   subsys/platform/zephyr_storage.cpp
   subsys/platform/zephyr_sensors.cpp
   subsys/platform/zephyr_ws2812.cpp
+  subsys/servers/button_service.cpp
   subsys/servers/encoder_service.cpp
   subsys/servers/hello_service.cpp
   subsys/servers/imu_service.cpp
