--- a/boards/st/lckfb_sky_board_stm32f407/lckfb_sky_board_stm32f407.dts
+++ b/boards/st/lckfb_sky_board_stm32f407/lckfb_sky_board_stm32f407.dts
@@ -37,6 +37,7 @@
 
 	gpio_keys {
 		compatible = "gpio-keys";
+		debounce-interval-ms = <50>;
 		key1: button_1 {
 			label = "KEY1";
 			gpios = <&gpioa 0 GPIO_ACTIVE_HIGH>;
