--- a/prj.conf
+++ b/prj.conf
@@ -11,6 +11,8 @@ CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG_BUFFER_SIZE=4096
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=2048
+CONFIG_LOG_PROCESS_TRIGGER_THRESHOLD=1
+CONFIG_LOG_PROCESS_THREAD_SLEEP_MS=10
 
 # Peripheral drivers
 CONFIG_DISPLAY=y
@@ -21,6 +23,8 @@ CONFIG_SKY_BOARD_WS2812_TIM5_DMA_BACKEND=y
 
 # Sensor framework and concrete drivers
 CONFIG_SENSOR=y
+CONFIG_INPUT=y
+CONFIG_INPUT_QUEUE_MAX_MSGS=64
 CONFIG_SPI=y
 CONFIG_INA226=y
 CONFIG_DHT20=y
